syntax = "proto3";

// Package declaration, for non-java implementations
package brabocoin;

import "org/brabocoin/brabocoin/Model.proto";

// Java package destination for generated classes
option java_package = "org.brabocoin.brabocoin.proto.dal";
option java_outer_classname = "BrabocoinStorageProtos";


message BlockInfo {
    Hash previousBlockHash = 1;
    Hash merkleRoot = 2;
    Hash targetValue = 3;
    bytes nonce = 4;
    int32 blockHeight = 5;
    int64 timestamp = 6;
    int32 transactionCount = 7;
    bool validated = 8;
    int32 fileNumber = 9;
    int64 offsetInFile = 10;
    int32 sizeInFile = 11;
    int64 offsetInRevertFile = 12;
    int32 sizeInRevertFile = 13;
}

message BlockFileInfo {
    int32 numberOfBlocks = 1;
    int64 size = 2;
    int32 lowestBlockHeight = 3;
    int32 highestBlockHeight = 4;
    int64 lowestBlockTimestamp = 5;
    int64 highestBlockTimestamp = 6;
}

message UnspentOutputInfo {
    bool coinbase = 1;
    int32 blockHeight = 2;
    int64 amount = 3;
    Hash address = 4;
}

message TransactionUndo {
    repeated UnspentOutputInfo outputInfoList = 1;
}

message BlockUndo {
    repeated TransactionUndo transactionUndos = 1;
}
