syntax = "proto3";

// Package declaration, for non-java implementations
package brabocoin;

// Java package destination for generated classes
option java_package = "org.brabocoin.brabocoin.proto.model";
option java_outer_classname = "BrabocoinProtos";

message Hash {
    bytes value = 1;
}

message Signature {

}

message Block {
    Hash previousBlockHash = 1;
    Hash merkleRoot = 2;
    Hash targetValue = 3;
    bytes nonce = 4;
    int64 timestamp = 5;
}

message BlockChain {

}

message Output {
    Hash address = 1;
    int64 amount = 2;
}

message Input {
    Signature signature = 1;
    Transaction referencedTransaction = 2;
}

message Transaction {
    repeated Input inputs = 1;
    repeated Output outputs = 2;
}